add_subdirectory(
Avltree
AsmParseMain
AsmParse
DecPrint
DisasElf
DisasFilter
DisasHex
DisasMacho
DisasRaw
DllDiscovery
DotPrep
Dot
EncLang
Enc21
Enc22
Enc23
ExAgen
ExCpuid
ExIld
ExIld2
Ex1
Ex3
Ex4
Ex5Enc
Ex6
Ex7
Ex8
Ex9Patch
ExamplesUtil
FindSpecial
Min
NmSymtab
Reps
Size
SymbolTable
Tables
Tester
Xed
)
